# cpp-ray-tracer

./: .gitignore  CMakeLists.txt  build.sh  configure.sh  test.sh
.github/workflows/: c-cpp.yml
src/: CMakeLists.txt  main.cpp
src/graphics/: canvas.cpp  canvas.h  color.cpp  color.h  material.cpp  material.h
src/io/: canvas.cpp  canvas.h
src/math/: float.h  matrix.cpp  matrix.h  tuple.cpp  tuple.h
src/physics/: environment.cpp  environment.h  intersections.cpp  intersections.h  light.h  projectile.h  ray.cpp  ray.h
src/physics/objects/: sphere.cpp  sphere.h
test/: CMakeLists.txt  color.cpp  material.cpp  matrix.cpp  ray.cpp  sphere.cpp  transformations.cpp  tuple.cpp
